erDiagram
    Users ||--o{ Concepts : creates
    Users ||--o{ UserActivity : performs
    Users ||--o{ ClaudeInteractions : initiates
    Concepts ||--o{ ClaudeInteractions : involves
    Concepts ||--o{ ConceptPhilosophers : has
    Concepts ||--o{ ConceptTraditions : belongs_to
    Concepts ||--o{ ConceptNames : has
    Concepts ||--o{ ConceptOrigins : has
    Concepts ||--o{ ConceptEvolutions : evolves_to
    Concepts ||--o{ HistoricalContexts : has
    Concepts ||--o{ PracticalApplications : has
    Concepts ||--o{ DialogueParticipants : participates_in
    Philosophers ||--o{ ConceptPhilosophers : mentioned_in
    Traditions ||--o{ ConceptTraditions : includes
    DialogueInterpretations ||--o{ DialogueParticipants : includes
    
    Users {
        uuid user_id PK
        string username
        string email
        string password_hash
        datetime created_at
        datetime last_login
        json user_settings
    }
    
    Concepts {
        uuid concept_id PK
        uuid creator_id FK
        string name
        text description
        datetime creation_date
        datetime last_modified
        boolean is_synthesis
        json parent_concepts
        string synthesis_method
        string focus
        int innovation_degree
        string historical_context
    }
    
    Philosophers {
        uuid philosopher_id PK
        string name
        int birth_year
        int death_year
        text description
        json traditions
    }
    
    Traditions {
        uuid tradition_id PK
        string name
        string time_period
        text description
        json key_figures
    }
    
    ConceptPhilosophers {
        uuid id PK
        uuid concept_id FK
        uuid philosopher_id FK
        string relationship_type
    }
    
    ConceptTraditions {
        uuid id PK
        uuid concept_id FK
        uuid tradition_id FK
        float relationship_strength
    }
    
    UserActivity {
        uuid activity_id PK
        uuid user_id FK
        string activity_type
        uuid target_id
        datetime activity_date
        json details
    }
    
    ClaudeInteractions {
        uuid interaction_id PK
        uuid user_id FK
        uuid concept_id FK
        string query_type
        text query_content
        text response_content
        datetime interaction_date
        float processing_time
    }
    
    ConceptNames {
        uuid name_id PK
        uuid concept_id FK
        string name
        text analysis
        json alternative_names
        datetime analyzed_at
        uuid interaction_id FK
    }
    
    ConceptOrigins {
        uuid origin_id PK
        uuid concept_id FK
        json parent_concepts
        json influence_weights
        text analysis
        datetime detected_at
        uuid interaction_id FK
    }
    
    Transformations {
        uuid transformation_id PK
        uuid source_id FK
        string source_type
        uuid target_id FK
        string target_type
        datetime created_at
        uuid interaction_id FK
        text transformation_details
    }
    
    ConceptEvolutions {
        uuid evolution_id PK
        uuid concept_id FK
        uuid target_concept_id FK
        text evolution_context
        json suggested_changes
        datetime created_at
        uuid interaction_id FK
    }
    
    HistoricalContexts {
        uuid context_id PK
        uuid concept_id FK
        string time_period
        text historical_analysis
        json influences
        json contemporaries
        json subsequent_influence
        datetime created_at
        uuid interaction_id FK
    }
    
    PracticalApplications {
        uuid application_id PK
        uuid concept_id FK
        json domains
        text application_analysis
        json implementation_methods
        json relevance_mappings
        datetime created_at
        uuid interaction_id FK
    }
    
    DialogueInterpretations {
        uuid dialogue_id PK
        string philosophical_question
        text dialogue_content
        json discussion_points
        json arguments
        datetime created_at
        uuid interaction_id FK
    }
    
    DialogueParticipants {
        uuid participant_id PK
        uuid dialogue_id FK
        uuid concept_id FK
        string role
        json key_theses
    }
